# whisper-notes

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.json  config.json  main.py  pyproject.toml
tests/: conftest.py  test_cli.py  test_collect.py  test_config.py  test_format.py  test_index.py  test_invariant.py  test_output.py  test_pipeline.py  test_readers.py
whisper_notes/: collect.py  config.py  format.py  index.py  output.py  pipeline.py  readers.py
